--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
         <!-- Marker-based AR -->
         <a-marker type="pattern" url="marker.patt">
             <!-- 3D Rose Model with Animation -->
