--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
         <!-- Marker-based AR -->
-        <a-marker type="pattern" url="marker.patt">
+        <a-marker preset="hiro">
             <!-- 3D Rose Model with Animation -->
             <a-entity gltf-model="rose.glb" position="0 0 0" scale="0 0 0">
                 <a-animation attribute="scale" to="0.5 0.5 0.5" dur="2000" easing="ease-out"></a-animation>
