--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <script src="https://rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-        <!-- Marker-based AR -->
+    <a-scene embedded arjs="sourceType: webcam; trackingMethod: best;">
+        <!-- Use Hiro marker for testing -->
         <a-marker preset="hiro">
-            <!-- 3D Rose Model with Animation -->
-            <a-entity gltf-model="rose.glb" position="0 0 0" scale="0 0 0">
-                <a-animation attribute="scale" to="0.5 0.5 0.5" dur="2000" easing="ease-out"></a-animation>
-            </a-entity>
+            <!-- Test with a simple red box -->
+            <a-box position="0 0 0" scale="0.5 0.5 0.5" color="red"></a-box>
         </a-marker>
 
         <a-entity camera></a-entity>
