--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam; trackingMethod: best;">
         <!-- Use Hiro marker for testing -->
-        <a-marker preset="hiro">
+        <a-marker type="pattern" url="marker.patt">
             <!-- Test with a simple red box -->
             <a-box position="0 0 0" scale="0.5 0.5 0.5" color="red"></a-box>
         </a-marker>
