--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam; trackingMethod: best;">
-        <!-- Use Hiro marker for testing -->
+        <!-- Use Custom "222" Marker -->
         <a-marker type="pattern" url="marker.patt">
             <!-- Test with a simple red box -->
             <a-box position="0 0 0" scale="0.5 0.5 0.5" color="red"></a-box>
