--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <a-scene embedded arjs="sourceType: webcam; trackingMethod: best;">
         <!-- Use Custom "222" Marker -->
         <a-marker type="pattern" url="marker.patt">
-            <!-- Test with a simple red box -->
-            <a-box position="0 0 0" scale="0.5 0.5 0.5" color="red"></a-box>
+            <!-- Load Your 3D Rose Model -->
+            <a-entity 
+                gltf-model="rose.glb" 
+                position="0 0 0" 
+                scale="0.5 0.5 0.5">
+            </a-entity>
         </a-marker>
 
         <a-entity camera></a-entity>
