--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam; trackingMethod: best;">
-        <!-- Use Custom "222" Marker -->
-        <a-marker type="pattern" url="marker.patt">
-            <!-- Load Your 3D Rose Model -->
-            <a-entity 
-                gltf-model="rose.glb" 
-                position="0 0 0" 
-                scale="0.5 0.5 0.5">
-            </a-entity>
-        </a-marker>
+        <!-- The rose appears in front of the camera without a marker -->
+        <a-entity 
+            gltf-model="rose.glb" 
+            position="0 0 -2" 
+            scale="0.5 0.5 0.5">
+        </a-entity>
 
         <a-entity camera></a-entity>
     </a-scene>
