--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a-scene embedded arjs="sourceType: webcam; trackingMethod: best;">
         <!-- The rose appears in front of the camera without a marker -->
         <a-entity 
-            gltf-model="rose_scan.glb" 
+            gltf-model="pale_orange_rosename_unknown-2.glb" 
             position="0 0 -2" 
             scale="0.5 0.5 0.5">
         </a-entity>
