--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 </head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs="sourceType: webcam; trackingMethod: best;">
-        <!-- The rose appears in front of the camera without a marker -->
-        <a-entity 
-            gltf-model="pale_orange_rosename_unknown-2.glb" 
-            position="0 0 -2" 
-            scale="0.5 0.5 0.5">
-        </a-entity>
+        <!-- Use Custom "222" Marker -->
+        <a-marker type="pattern" url="marker.patt">
+            <!-- Load the 3D Rose Model -->
+            <a-entity 
+                gltf-model="rose_scan.glb" 
+                position="0 0 0" 
+                scale="0.5 0.5 0.5">
+            </a-entity>
+        </a-marker>
 
         <a-entity camera></a-entity>
     </a-scene>
