--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <a-scene embedded arjs="sourceType: webcam; trackingMethod: best;">
         <!-- Use Custom "222" Marker -->
         <a-marker type="pattern" url="marker.patt">
-            <!-- Load the 3D Rose Model -->
+            <!-- Floating Transparent Red Square (Debug Layer) -->
+            <a-plane position="0 0 0" rotation="-90 0 0" width="1" height="1" color="red" material="opacity: 0.3; transparent: true"></a-plane>
+
+            <!-- Load the 3D Rose Model and Adjust Its Position -->
             <a-entity 
                 gltf-model="rose_scan.glb" 
-                position="0 0 0" 
-                scale="0.5 0.5 0.5">
+                position="0 0.1 0"   <!-- Lifts the rose slightly above the marker -->
+                rotation="-90 0 0"   <!-- Rotates it so it sits properly -->
+                scale="0.2 0.2 0.2">
             </a-entity>
         </a-marker>
 
