--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         <!-- Use Custom "222" Marker -->
         <a-marker type="pattern" url="marker.patt">
             <!-- Floating Transparent Red Square (Debug Layer) -->
-            <a-plane position="0 0 0" rotation="-90 0 0" width="1" height="1" color="red" material="opacity: 0.3; transparent: true"></a-plane>
+            <a-plane position="0 0.05 0" rotation="-90 0 0" width="1" height="1" color="red" material="opacity: 0.3; transparent: true; side: double;"></a-plane>
 
-            <!-- Load the 3D Rose Model and Adjust Its Position -->
+            <!-- Load the 3D Rose Model -->
             <a-entity 
-                gltf-model="rose_scan.glb" 
-                position="0 0.1 0"   <!-- Lifts the rose slightly above the marker -->
-                rotation="-90 0 0"   <!-- Rotates it so it sits properly -->
-                scale="0.2 0.2 0.2">
+                gltf-model="pale_orange_rosename_unknown-2.glb" 
+                position="0 0.2 0"   <!-- Lift the rose slightly above the marker -->
+                rotation="-90 0 0"   <!-- Rotate it so it sits properly -->
+                scale="0.3 0.3 0.3"> <!-- Make sure it's big enough -->
             </a-entity>
         </a-marker>
 
