--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <!-- Load the 3D Rose Model (10x Bigger) -->
             <a-entity 
-                gltf-model="rose_scan.glb" 
+                gltf-model="pale_orange_rosename_unknown-2.glb" 
                 position="0 0.2 0"   <!-- Lift it above the marker -->
                 rotation="-90 0 0"   <!-- Rotate to stand correctly -->
                 scale="3 3 3">       <!-- 10x bigger than before -->
